syntax = "proto3";

package services.kon.github_actions.v1;
option go_package = "github.com/containerish/OpenRegistry/services/kon/github_actions/v1;github_actions_v1";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

service GithubActionsBuildService {
  rpc StoreJob(StoreJobRequest) returns (StoreJobResponse) {}
  rpc GetBuildJob(GetBuildJobRequest) returns (GetBuildJobResponse) {}
  rpc TriggerBuild(TriggerBuildRequest) returns (TriggerBuildResponse) {}
  rpc CancelBuild(CancelBuildRequest) returns (CancelBuildResponse) {}
  rpc DeleteJob(DeleteJobRequest) returns (DeleteJobResponse) {}
  rpc ListBuildJobs(ListBuildJobsRequest) returns (ListBuildJobsResponse) {}
  rpc BulkDeleteBuildJobs(BulkDeleteBuildJobsRequest) returns (BulkDeleteBuildJobsResponse) {}
}

message BulkDeleteBuildJobsRequest {
    string owner_id = 1;
    repeated int64 job_ids = 2;
    string repo = 3;
}

message BulkDeleteBuildJobsResponse {
    string message = 1;
}

message TriggerBuildRequest {
    int64 run_id = 1;
    google.protobuf.Timestamp triggered_at = 2;
    string owner_id = 3;
    string repo = 4;
}

message TriggerBuildResponse {
    string message = 1;
}


message CancelBuildRequest {
    int64 job_id = 1;
    int64 run_id = 2;
    google.protobuf.Timestamp cancelled_at = 3;
    string owner_id = 4;
    string repo = 5;
}

message CancelBuildResponse {
    string message = 1;
}

message GetBuildJobRequest {
    int64 job_id = 1;
    string owner_id = 2;
    string repo = 3;
}

message GetBuildJobResponse {
    int64 id = 1;
    string logs_url = 2;
    string status = 3;
    string triggered_by = 4;
    google.protobuf.Duration duration = 5;
    string branch = 6;
    string commit_hash = 7;
    google.protobuf.Timestamp triggered_at = 8;
    string owner_id = 9;
}

message DeleteJobRequest {
    int64 run_id = 1;
    string owner_id = 2;
    string repo = 3;
}

message DeleteJobResponse {
    string message = 1;
}

message StoreJobResponse {
    string message = 1;
}

message StoreJobRequest {
    string id = 1;
    string logs_url = 2;
    string status = 3;
    string triggered_by = 4;
    google.protobuf.Duration duration = 5;
    string branch = 6;
    string commit_hash = 7;
    google.protobuf.Timestamp triggered_at = 8;
    string owner_id = 9;
}

message ListBuildJobsRequest {
    string id = 1;
    string owner_id = 2;
    string repo = 3;
}

message ListBuildJobsResponse {
    repeated GetBuildJobResponse jobs = 1;
}

